# RetailGoodsAndPrices

./: .gitignore  01_create_sample.ipynb  02_normalize.ipynb  03_set_retail_prices.ipynb  04_generate_orders.ipynb  05_discount_cards.ipynb  06_join_all_data.ipynb  README.md  RetailGoodsAndPrices.csv  RetailGoodsAndPrices.xlsx  generate_orders.ipynb  normalize.ipynb  pyproject.toml  sample.ipynb
data/: Discount_cards.csv  RetailGoodsAndPrices.csv  RetailGoodsAndPrices.xlsx  SalesPoints.xlsx
