[tool.poetry]
name = "retailgoodsandprices"
version = "0.1.0"
description = ""
authors = ["Roman Garanin <garanin.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
